# feature-homework_10_1

./: .flake8  README.md  mylog.txt  pyproject.toml
src/: config_test_generators.py  decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: mylog.txt  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
